fix: search bar not centred due to 90% width

--- a/assets/scss/_k8s_search.scss
+++ b/assets/scss/_k8s_search.scss
@@ -9,6 +9,10 @@
   }
 }
 
+.td-search {
+  width: unset;
+}
+
 // PageFind Styles
 
 #search .pagefind-ui form {
